[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Kiroshi"
version = "0.0.0"
description = "Generic Alerting Platform"
authors = ["Bink DevOps <devops@bink.com>"]
readme = "README.md"

[tool.poetry.scripts]
kiroshi = "kiroshi.cli.cli:cli" # cli

[[tool.poetry.source]]
name = "bink-pypi"
url = "https://pypi.gb.bink.com/simple"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.11"
azure-identity = "^1.15.0"
azure-monitor-query = "^1.2.0"
sqlalchemy = "^2.0.23"
pydantic-settings = "^2.1.0"
click = "^8.1.7"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"
loguru = "^0.7.2"
pendulum = "^2.1.2"
beautifulsoup4 = "^4.12.2"
azure-keyvault = "^4.2.0"
trogon = "^0.5.0"
cryptography = "^41.0.5"
paramiko = "^3.3.1"
azure-storage-blob = "^12.19.0"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
aiohttp = "^3.8.6"
bink-logging-utils = "^1.4.0"
kr8s = "^0.10.0"
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.5"
pytest = "^7.4.3"
pytest-html = "^4.1.1"

[tool.black]
line-length = 120

[tool.ruff]
select = ["ALL"]
ignore = ["ANN101", "COM812", "D203", "D213", "D407", "FA102", "G004", "PLR0913"]
line-length = 250
