[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Kiroshi"
version = "0.0.0"
description = "Generic Alerting Platform"
authors = ["Bink DevOps <devops@bink.com>"]
readme = "README.md"

[tool.poetry.scripts]
kiroshi = "kiroshi.cli.cli:cli" # cli

[[tool.poetry.source]]
name = "bink-pypi"
url = "https://pypi.gb.bink.com/simple"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.11"
azure-identity = "^1"
azure-monitor-query = "^1"
sqlalchemy = "^2"
pydantic-settings = "^2"
click = "^8"
alembic = "^1"
psycopg2-binary = "^2"
requests = "^2"
loguru = "^0"
pendulum = "^2"
beautifulsoup4 = "^4"
azure-keyvault = "^4"
trogon = "^0"
cryptography = "^41"
paramiko = "^3"
azure-storage-blob = "^12"
fastapi = "^0"
uvicorn = "^0"
aiohttp = "^3"
bink-logging-utils = "^1"
kr8s = "^0"
tenacity = "^8"
azure-storage-file-share = "^12.15.0"

[tool.poetry.group.dev.dependencies]
black = "^23"
ruff = "^0"
pytest = "^7"
pytest-html = "^4"

[tool.black]
line-length = 120

[tool.ruff]
select = ["ALL"]
ignore = ["ANN101", "COM812", "D203", "D213", "D407", "FA102", "G004", "PLR0913"]
line-length = 250
